# tailor

./: .gitignore  Cargo.toml  Dockerfile  README.md  tailor.yaml.sample
.github/: tailor.yaml
assets/templates/: status.hbs
src/: config.rs  errors.rs  github.rs  main.rs  routes.rs  worker.rs
src/checks/: max_body_line_length.rs  max_summary_length.rs  mod.rs  no_capitalize_summary.rs  no_fixup.rs  no_squash.rs  no_wip.rs  requires_body.rs  summary_scope.rs
src/config/: mod.rs
src/expr/: ast.rs  mod.rs
src/expr/ast/: mod.rs  types.rs
src/expr/value-derive/: Cargo.toml
src/expr/value-derive/src/: lib.rs
src/github/: .mod.rs.swp  .set_status.rs.swp  mod.rs  set_status.rs  types.rs  validate.rs
src/github_handler/: mod.rs  set_status.rs
src/routes/: hook.rs  mod.rs
