[package]
name = "tailor"
version = "0.1.0"
authors = ["Alex Crawford <alex.crawford@coreos.com>", "Alexander Pavel <alex.pavel@coreos.com>"]

[dependencies]
base64 = "*"
chrono = { version = "*", features = ["serde"] }
clap = "*"
value-derive = { path = "src/expr/value-derive" }
error-chain = "*"
github-rs = { git = "https://github.com/crawford/github-rs", branch = "contents" }
iron = "*"
log = "*"
loggerv = "*"
nom = "*"
persistent = "*"
regex = "*"
router = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_yaml = "*"
