[package]
name = "tailor"
version = "0.1.0"
authors = ["Alex Crawford <alex.crawford@coreos.com>", "Alexander Pavel <alex.pavel@coreos.com>"]

[dependencies]
base64 = "*"
chrono = { version = "*", features = ["serde"] }
clap = "*"
value-derive = { path = "src/expr/value-derive" }
error-chain = "*"
github-rs = "*"
handlebars-iron = "*"
iron = "*"
log = "*"
loggerv = "*"
nom = "*"
params = "*"
persistent = "*"
regex = "*"
router = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_yaml = "*"

[features]
watch = ["handlebars-iron/watch"]
